[package]
name = "hoard_chunker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
blake3 = "1.5.4"
bytebuffer = "2.3.0"
clap = { version = "4.5.20", features = ["derive"] }
fastcdc = "3.1.0"
itertools = "0.13.0"
log = "0.4.22"
opendal = { version = "0.50.0", features = ["services-fs"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
simplelog = "0.12.2"
walkdir = "2.5.0"
zstd = "0.13.2"
